--- a/cLand/src/index.html
+++ b/cLand/src/index.html
@@ -4,10 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>Document</title>
-    <link rel='stylesheet' href='dist/style.css'>
 </head>
-<body>
-    Privet
+<body class="margin-zero">
+    <header class="header">
+      <div class="header__top-container">
+        <div class="header-top-container__burger">
+          <button class="header-burger__element">
+            <i class="color-white fas fa-bars"></i>
+          </button>
+        </div>
+        <div class="header-top-container__squares">
+          <!-- <img src="./assets/yellowRectangle.png" alt="yellowRectangle">
+          <img src="./assets/purpleRectangle.png" alt="purpleRectangle"> -->
+        </div>
+        <div class="header-top-container__authorize">
+          <button class="color-white header-autorize__buttons header-autorize__sign-in">Sign in</button>
+          <button class="color-white header-autorize__buttons header-autorize__sign-up">Sign Up</button>
+        </div>
+      </div>
+    </header>
+    <main class="main">
+      <div class="main-top__container">
+        <div class="main-top__headline">
+          <h2 class="margin-zero color-white main-top-headline__top">The easiest way to accept digital currencies</h2>
+          <div class="main-top-headline__container">
+            <p class="margin-zero color-white main-top-headline__text">
+              Creativity itself doesn't care at all about results - the only thing it craves
+              is the process. Learn to love the process and let whatever happens next happen,
+              without fussing too much about it.
+            </p>
+          </div>
+        </div>
+        <div class="main-top__sign-up">
+          <button class="main-top__button">Sign Up</button>
+        </div>
+        <div class="main-top__examples">
+          <div class="main-top-examples__big-container"></div>
+          <div class="main-top-examples__medium-container"></div>
+          <div class="main-top-examples__small-container"></div>
+        </div>
+      </div>
+    </main>
+    <footer class="footer">
+
+    </footer>
 </body>
 </html>
