feat: add squares in header feat: add block awards in main

--- a/cLand/src/index.html
+++ b/cLand/src/index.html
@@ -16,8 +16,8 @@
           </button>
         </div>
         <div class="header-top-container__squares">
-          <!-- <img src="./assets/yellowRectangle.png" alt="yellowRectangle">
-          <img src="./assets/purpleRectangle.png" alt="purpleRectangle"> -->
+          <div class="header-squares__yellow"></div>
+          <div class="header-squares__purple"></div>
         </div>
         <div class="header-top-container__authorize">
           <button class="color-white header-autorize__buttons header-autorize__sign-in">Sign in</button>
@@ -45,6 +45,24 @@
           <div class="main-top-examples__medium-container"></div>
           <div class="main-top-examples__small-container"></div>
         </div>
+      </div>
+      <div class="margin-zero main__awards">
+        <h2 class="margin-zero main-awards__headline">Recommendations and awards by a number of our clients.</h2>
+        <ul class="margin-zero main-awards__logos">
+          <li class="main-awards-logos__li">
+            <img src="./assets/betAwards.png" alt="">
+          </li>
+          <li class="main-awards-logos__li">
+            <img src="./assets/betAwards.png" alt="">
+          </li>
+          <li class="main-awards-logos__li">
+            <img src="./assets/betAwards.png" alt="">
+          </li>
+          <li class="main-awards-logos__li">
+            <img src="./assets/betAwards.png" alt="">
+          </li>
+        </ul>
+        <button class="main-awards__button">All Awards</button>
       </div>
     </main>
     <footer class="footer">
