feat: add block with 'amazing things'

--- a/cLand/src/index.html
+++ b/cLand/src/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <title>cLand</title>
 </head>
 <body class="margin-zero">
-    <header class="header">
-      <div class="header__top-container">
-        <div class="header-top-container__burger">
-          <button class="header-burger__element">
-            <i class="color-white fas fa-bars"></i>
-          </button>
-        </div>
-        <div class="header-top-container__squares">
-          <div class="header-squares__yellow"></div>
-          <div class="header-squares__purple"></div>
-        </div>
-        <div class="header-top-container__authorize">
-          <button class="color-white header-autorize__buttons header-autorize__sign-in">Sign in</button>
-          <button class="color-white header-autorize__buttons header-autorize__sign-up">Sign Up</button>
-        </div>
+  <header class="header">
+    <div class="header__top-container">
+      <div class="header-top-container__burger">
+        <button class="header-burger__element">
+          <i class="color-white fas fa-bars"></i>
+        </button>
       </div>
-    </header>
-    <main class="main">
+      <div class="header-top-container__squares">
+        <div class="header-squares__yellow"></div>
+        <div class="header-squares__purple"></div>
+      </div>
+      <div class="header-top-container__authorize">
+        <button class="color-white header-autorize__buttons header-autorize__sign-in">Sign in</button>
+        <button class="color-white header-autorize__buttons header-autorize__sign-up">Sign Up</button>
+      </div>
+    </div>
+  </header>
+  <main class="main">
       <div class="main-top__container">
         <div class="main-top__headline">
           <h2 class="margin-zero color-white main-top-headline__top">The easiest way to accept digital currencies</h2>
@@ -49,20 +49,103 @@
       <div class="margin-zero main__awards">
         <h2 class="margin-zero main-awards__headline">Recommendations and awards by a number of our clients.</h2>
         <ul class="margin-zero main-awards__logos">
-          <li class="main-awards-logos__li">
+          <li class="main-awards-logos__li awards__betAwards-li">
             <img src="./assets/betAwards.png" alt="">
           </li>
-          <li class="main-awards-logos__li">
-            <img src="./assets/betAwards.png" alt="">
+          <li class="main-awards-logos__li awards__kiteusta-li">
+            <img src="./assets/kiteusta.png" alt="">
           </li>
-          <li class="main-awards-logos__li">
-            <img src="./assets/betAwards.png" alt="">
+          <li class="main-awards-logos__li awards__nothern-li">
+            <img src="./assets/northern.png" alt="">
           </li>
-          <li class="main-awards-logos__li">
-            <img src="./assets/betAwards.png" alt="">
+          <li class="main-awards-logos__li awards__thedrum-li">
+            <img src="./assets/thedrum.png" alt="">
           </li>
         </ul>
         <button class="main-awards__button">All Awards</button>
+      </div>
+      <div class="main__amazing-things">
+        <div class="main-amazing-things__headline-and-options">
+          <h2 class="amazing-things__headline">Some of Amazing things you must know them</h2>
+          <ul class="amazing-things__ul">
+            <li class="amazing-things-options__li">
+              <span class="amazing-things-options-li__container">
+                <img src="./assets/like.png" alt="" class="amazing-thinks__like-img">
+                <span class="amazing-things-options-li-container__text-container">
+                  <h4 class="amazing-things-options-li-container-text-container__headline">100% FEEDBACK</h4>
+                  <p class="amazing-things-options-li-container-text-container__paragraph">
+                    Without change there is no innovation, creativity, or incentive
+                    for improvement. Those who initiate change will have a better
+                    opportunity to manage the change that is inevitable.
+                  </p>
+                </span>
+              </span>
+            </li>
+            <li class="amazing-things-options__li">
+              <span class="amazing-things-options-li__container">
+                <img src="./assets/smile_icon.png" alt="" class="amazing-thinks__smile-img">
+                <span class="amazing-things-options-li-container__text-container">
+                  <h4 class="amazing-things-options-li-container-text-container__headline">
+                    ALL CLIENT HAPPY
+                  </h4>
+                  <p class="amazing-things-options-li-container-text-container__paragraph">
+                    Without change there is no innovation, creativity, or incentive
+                    for improvement. Those who initiate change will have a better
+                    opportunity to manage the change that is inevitable.
+                  </p>
+                </span>
+              </span>
+            </li>
+            <li class="amazing-things-options__li">
+              <span class="amazing-things-options-li__container">
+                <img src="./assets/phone_icon.png" alt="" class="amazing-thinks__phone-img">
+                <span class="amazing-things-options-li-container__text-container">
+                  <h4 class="amazing-things-options-li-container-text-container__headline">
+                    LIVE SUPPORT
+                  </h4>
+                  <p class="amazing-things-options-li-container-text-container__paragraph">
+                    Without change there is no innovation, creativity, or incentive
+                    for improvement. Those who initiate change will have a better
+                    opportunity to manage the change that is inevitable.
+                  </p>
+                </span>
+              </span>
+            </li>
+            <li class="amazing-things-options__li">
+              <span class="amazing-things-options-li__container">
+                <img src="./assets/desktop_icon.png" alt="" class="amazing-thinks__desktop-img">
+                <span class="amazing-things-options-li-container__text-container">
+                  <h4 class="amazing-things-options-li-container-text-container__headline">
+                    DESKTOP DISPLAY
+                  </h4>
+                  <p class="amazing-things-options-li-container-text-container__paragraph">
+                    Without change there is no innovation, creativity, or incentive
+                    for improvement. Those who initiate change will have a better
+                    opportunity to manage the change that is inevitable.
+                  </p>
+                </span>
+              </span>
+            </li>
+          </ul>
+        </div>
+        <div class="main-amazing-things__support">
+          <div class="main-amazing-things-support__container">
+            <div class="main-amazing-things-support__text">
+              <h4 class="amazing-things-options-li-container-text-container__headline">LIVE SUPPORT</h4>
+              <p class="amazing-things__live-support">
+                Without change there is no innovation, creativity, or incentive
+                or improvement. Those who initiate change will have a better
+                opportunity to manage the change that is inevitable.
+              </p>
+            </div>
+            <div class="main-amazing-things-support__bunner">
+              <button class="main-amazing-things-support-bunner__button">
+                <p class="main-amazing-things-support-bunner-button-first">78%</p>
+                <p class="main-amazing-things-support-bunner-button-second">from USA</p>
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <footer class="footer">
