feat: add block blockqoute

--- a/cLand/src/index.html
+++ b/cLand/src/index.html
@@ -147,6 +147,22 @@
           </div>
         </div>
       </div>
+      <div class="main__container-blockqoute">
+        <div class="main-container-blockqoute__block-img">
+          <img src="./assets/text_icon.png" alt="" class="color-white main-container-blockqoute__img">
+        </div>
+        <div class="main-container-blockqoute__block-paragraph">
+          <p class="color-white main-container-blockqoute__paragraph">
+            Creativity itself doesn't care at all about results - the only thing it craves is the process.
+            Learn to love the process and let whatever happens next happen, without fussing too much about it.
+          </p>
+        </div>
+        <div class="main-container-blockqoute__container-name">
+          <img src="./assets/smile_icon.png" alt="" class="main-container-blockqoute-container-name__img">
+          <p class="color-white main-container-blockqoute-container-name__tire">--</p>
+          <p class="main-container-blockqoute-container-name__name">John Deo</p>
+        </div>
+      </div>
     </main>
     <footer class="footer">
 
