feat: add block with form

--- a/cLand/src/index.html
+++ b/cLand/src/index.html
@@ -165,7 +165,20 @@
       </div>
     </main>
     <footer class="footer">
-
+      <form action="" class="footer__form">
+        <h2 class="footer-form__headline">Any QUESTION</h2>
+        <div class="footer-form__container-inputs">
+          <input type="text" placeholder="NAME" class="footer-form__inputs footer-form__input-name">
+          <input type="text" placeholder="E-MAIL" class="footer-form__inputs footer-form__input-email">
+          <input type="text" placeholder="SUBJECT" class="footer-form__inputs footer-form__input-subject">
+          <input type="text" placeholder="MESSAGE" class="footer-form__inputs footer-form__input-message">
+        </div>
+        <div class="footer-form__container-button">
+          <button class="footer-form__button">
+            SEND
+          </button>
+        </div>
+      </form>
     </footer>
 </body>
 </html>
