feat: add about block

--- a/cLand/src/index.html
+++ b/cLand/src/index.html
@@ -179,6 +179,11 @@
           </button>
         </div>
       </form>
+      <div class="footer__about">
+        <p class="footer-about__text">
+          cLand - 1 office #32 main building street view, New York
+        </p>
+      </div>
     </footer>
 </body>
 </html>
